fix: styling issues with team members on smaller devices and screen offset for hero

--- a/src/components/TeamMember/TeamMember.module.css
+++ b/src/components/TeamMember/TeamMember.module.css
@@ -63,7 +63,7 @@
     justify-content: center;
   }
 
-  .team_member_community hgroup {
+  .team_member.community hgroup {
     text-align: center;
   }
 }
