--- a/src/components/TeamMembersList/TeamMembersList.module.css
+++ b/src/components/TeamMembersList/TeamMembersList.module.css
@@ -1,3 +1,8 @@
+.team_member_founders_container {
+  display: flex;
+  flex-direction: column;
+}
+
 .team_member_community_container {
   align-items: center;
   display: flex;
@@ -9,25 +14,11 @@
 	##################
 	##################
 	##################
-	SMALL SCREENS
+	SMALL SCREENS & UP
 	##################
 */
-@media only screen and (min-width: 480px) and (max-width: 1280px) {
+@media only screen and (min-width: 800px) {
   .team_member_founders_container {
-    flex-direction: row;
-  }
-}
-
-/* 
-	##################
-	##################
-	##################
-	DESKTOP
-	##################
-*/
-@media only screen and (min-width: 1280px) and (min-height: 1400px) {
-  .team_member_founders_container {
-    display: flex;
     flex-direction: row;
   }
 }
